--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
